@@ -73,6 +73,14 @@ https://github.com/networkupstools/nut/milestone/9
      and misfired on some platforms, and the way to print had a theoretical
      potential for buffer overflow. [#2915]
 
+ - `dummy-ups` driver updates:
+   * A new instruction `ALARM` was added for the `Dummy Mode` operation
+     of the driver, enabling simulation of UPS alarm states more closely
+     in line with modern, real-world UPS driver implementations. This
+     follows the updated principle of keeping alarm states decoupled from
+     the `ups.status` variable, with alarms now raised via common alarm
+     functions rather than direct manipulation. [issue #2928]
+
  - `usbhid-ups` driver updates:
    * The `cps-hid` subdriver's existing mechanism for fixing broken report
      descriptors was extended to cover a newly reported case of nominal UPS
